# AuthMobile

./: .env_sampe_docker  .env_sample_local  AuthMobile.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  users_fixture.json
authapp/: forms.py  urls.py  views.py
authapp/templates/authapp/: base.html  index.html  users_list.html
authapp/templates/authapp/includes/: header.html  menu.html
config/: settings.py  urls.py
users/: backends.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: add_test_data.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
users/templates/password_reset/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
users/templates/registration/: logged_out.html  login.html  register.html
users/templates/users/: phone_confirm.html  phone_login.html
